--- a/src/pages/overview/overview.scss
+++ b/src/pages/overview/overview.scss
@@ -2,3 +2,14 @@ page-home {
 
 }
 
+ion-grid{
+  padding: 16px;
+}
+
+
+#profielfoto {
+  height: 400px;
+  margin-bottom: 30px;
+
+
+}
